# home360

./: README.md
Home360Frontend/: .com.facebook.react.fabric.mounting.SurfaceMountingManager.swp  .com.facebook.react.uimanager.ViewManager.swp  .com.facebook.react.uimanager.ViewManagerPropertyUpdater$FallbackViewManagerSetter.swp  .com.facebook.react.uimanager.ViewManagerPropertyUpdater.swp  .gitignore  App.js  api.js  app.json  client.json  package-lock.json  package.json
Home360Frontend/android/: settings.gradle
Home360Frontend/api/: api.js
Home360Frontend/ios/: Podfile
Home360Frontend/navigation/: AppNavigator.js  BottomTabNavigator.js  TabBar.js
Home360Frontend/screens/: .ProfesionalesScreen.js.swp  ApprovalPendingScreen.js  (+25 more)
home360-backend/: .env  .firebaserc  firebase.json  pyproject.toml
home360-backend/app/: main.py  sockets.py
home360-backend/app/models/entities/: Admin.py  Appointment.py  Chat.py  EmergencyMessage.py  Image.py  Message.py  Patient.py  Physician.py  Professional.py  Quotation.py  Service.py  User.py  Zone.py
home360-backend/app/models/requests/: NotificationsRequests.py  QuotationRequests.py  ServiceRequests.py  UserRequests.py
home360-backend/app/models/responses/: ChatResponses.py  NotificationResponses.py  ProfessionalResponses.py  QuotationResponses.py  RewardResponses.py  ServiceResponses.py  UserResponses.py  ZonesResponses.py
home360-backend/app/routers/: chat.py  professionals.py  quotation.py  services.py  sockets.py  specialties.py  users.py  zones.py
home360-backend/app/tests/: config.py  mock_firestore.py
(+9 files in other folders)
